syntax = "proto3";

package cryptalias.v1;

option go_package = "github.com/kaigoh/cryptalias/proto/cryptalias/v1;cryptaliasv1";

service WalletService {
  rpc GetAddress(WalletAddressRequest) returns (WalletAddressResponse);
  rpc Health(HealthRequest) returns (HealthResponse);
}

message WalletAddressRequest {
  string ticker = 1;
  string alias = 2;
  string tag = 3;
  string domain = 4;
  optional uint64 account_index = 5;
  optional string account_id = 6;
  optional string wallet_id = 7;
}

message WalletAddressResponse {
  string address = 1;
}

message HealthRequest {}
message HealthResponse {
  bool ok = 1;
  string message = 2;
}
